# Sandstorm-Monorepo

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  bunfig.toml  package.json  pnpm-workspace.yaml  tsconfig.base.json  tsup.config.ts  turbo.json
.github/workflows/: ci.yml  edge-agent.yml
apps/dashboard/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/dashboard/src/: App.tsx  styles.css
blog/: 001-introducing-sandstorm.md  002-sandstorm-v2-2025-container-tech.md  003-thoughtforms-agentic-infrastructure.md
docs/: IMPLEMENTATION_PLAN.md  ML_ORCHESTRATION.md  TESTING_STRATEGY.md  self-hosted-deployment.md
scripts/: build.ts  cleanup-packages.ts  convert-to-bun.ts
services/gateway/: Cargo.toml  README.md
services/gateway/src/: main.rs
services/gateway/src/runtime/: firecracker.rs  gvisor.rs  kata.rs  mod.rs  test.rs
services/security-monitor/: Cargo.toml  README.md  build.rs  config.yaml
services/security-monitor/migrations/: 20241201000001_initial_schema.sql
services/security-monitor/src/: config.rs  ebpf.rs  events.rs  falco.rs  main.rs  metrics.rs  models.rs  policies.rs  quarantine.rs  storage.rs  websocket.rs
services/security-monitor/src/bpf/: monitor.bpf.c
services/snapshot-vault/: Cargo.toml
services/snapshot-vault/src/: main.rs
services/telemetry-collector/: Cargo.toml  README.md
services/telemetry-collector/migrations/: 20231215000001_initial_schema.sql  20240201000002_edge_metrics.sql
services/telemetry-collector/src/: config.rs  db.rs  error.rs  main.rs  metrics.rs  models.rs
services/telemetry-collector/src/handlers/: edge.rs  health.rs  metrics.rs  mod.rs  telemetry.rs
