[package]
name = "security-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }

# Security monitoring
libbpf-rs = "0.22"
libbpf-cargo = "0.22"

# Message queue
lapin = "2.3"

# Metrics
prometheus = "0.13"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.13"
dashmap = "5.5"

# Crypto
ring = "0.17"
base64 = "0.21"

[build-dependencies]
libbpf-cargo = "0.22"

[[bin]]
name = "security-monitor"
path = "src/main.rs"